test_compiler/errors/e06.gm
Procedure foo(G: Graph)
{
    Int x;
    {
        Int x;
    }

}

